# agent4agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml
agent4target/agents/: __init__.py  collectors.py  explainer.py  literature.py  scorer.py
agent4target/api/: main.py
agent4target/cli/: main.py
agent4target/orchestrator/: __init__.py  workflow.py
agent4target/schema/: __init__.py  evidence.py
examples/: Agent4Target_Demo.ipynb  run_benchmark.py
tests/: __init__.py  test_explainer.py  test_schema.py  test_scorer.py
