[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent4target"
version = "0.1.0"
description = "Agent-based Evidence Aggregation Toolkit for Therapeutic Target Identification"
authors = [
    { name = "Ziheng Duan" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "langgraph>=0.0.10",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
]

[project.scripts]
agent4target = "agent4target.cli.main:app"
